--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -12,9 +12,9 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - uses: actions/checkout@v3
+    # - uses: actions/checkout@v3
     
-    - name: Build the Docker image
-      run: |
-        cd image-creation
-        ./build.sh
+    # - name: Build the Docker image
+    #   run: |
+    #     cd image-creation
+    #     ./build.sh
